--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit
-pandas
-seaborn
-matplotlib
-numpy
-requests
-
+streamlit==1.32.0
+pandas==2.2.0
+seaborn==0.13.2
+matplotlib==3.8.3
+numpy==1.26.3
